@@ -129,8 +129,8 @@ public class CDOptionsImpl extends GeneralConfig implements CalcDaltonOptions {
         StringTokenizer st=new StringTokenizer(s,"{,} ");
         while(st.hasMoreTokens()) {
             String tok=st.nextToken();
-            Character key=Character.valueOf(tok.charAt(0));
-            Double val=Double.valueOf(tok.substring(tok.indexOf('=')+1));
+            Character key=new Character(tok.charAt(0));
+            Double val=new Double(tok.substring(tok.indexOf('=')+1));
             m.put(key,val);
         }
         return m;
@@ -146,8 +146,8 @@ public class CDOptionsImpl extends GeneralConfig implements CalcDaltonOptions {
         StringTokenizer st=new StringTokenizer(s,"{,}");
         while(st.hasMoreTokens()) {
             String tok=st.nextToken();
-            Character key=Character.valueOf(tok.charAt(0));
-            Double val=Double.valueOf(tok.substring(tok.indexOf('=')+1));
+            Character key=new Character(tok.charAt(0));
+            Double val=new Double(tok.substring(tok.indexOf('=')+1));
             m.put(key,val);
         }
         return m;
